
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct wtbl_req_hdr {int operation; int wlan_idx; } ;
struct TYPE_2__ {int idx; } ;
struct mt7615_sta {TYPE_1__ wcid; } ;
struct mt7615_dev {int mt76; } ;
struct ieee80211_sta {scalar_t__ drv_priv; } ;
typedef int req ;


 int MCU_EXT_CMD_WTBL_UPDATE ;
 int WTBL_RESET_AND_SET ;
 int __mt76_mcu_send_msg (int *,int ,struct wtbl_req_hdr*,int,int) ;

int mt7615_mcu_del_wtbl(struct mt7615_dev *dev,
   struct ieee80211_sta *sta)
{
 struct mt7615_sta *msta = (struct mt7615_sta *)sta->drv_priv;
 struct wtbl_req_hdr req = {
  .wlan_idx = msta->wcid.idx,
  .operation = WTBL_RESET_AND_SET,
 };

 return __mt76_mcu_send_msg(&dev->mt76, MCU_EXT_CMD_WTBL_UPDATE,
       &req, sizeof(req), 1);
}
